# powcaptcha

./: .gitignore  README.md
client/python/: README.md  pyproject.toml
client/python/src/powcaptcha/: __init__.py  captcha.py  utils.py
client/python/tests/: test.py
server/: config.json  main.py  models.py  pyproject.toml  utils.py
